# Primeagen-AlgoCourse

./: 10_Palindrome.cpp  10_Recursion2.cpp  11_EveryPalindrome.cpp  12_BTPreorder.cpp  14_LC510_INOSuccessor.cpp  17_CompareTrees.cpp  1_LinearSearch.cpp  2_BinarySearch.cpp  3_TwoCrystalBalls.cpp  4_BubbleSort.cpp  5-Queue.cpp  6_Stack.cpp  7_Recursion.cpp  8_Quicksort.cpp  9_DoublyLinkedList.cpp  BinarySearch.cpp  CMakeLists.txt  Test.cpp  TestTest.cpp
BinaryTree/: 12_BTPreorder.cpp  13_BTInorder.cpp  15_BTPostorder.cpp  16_BTBreadthFirstSearch.cpp  17_CompareTrees.cpp  18_BinarySearchTree.cpp
Data_Struct/: 19_Heap.cpp  5-Queue.cpp  9_DoublyLinkedList.cpp
Graphs/: 20_BFSMatrix.cpp
Search_&_Sort/: 2_BinarySearch.cpp
