cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_CXX_STANDARD 23)


add_executable(untitled main.cpp)
add_executable(LinearSearch 1_LinearSearch.cpp)
add_executable(BinarySearch 2_BinarySearch.cpp)
add_executable(TwoCrystalBalls 3_TwoCrystalBalls.cpp)
add_executable(BubbleSort 4_BubbleSort.cpp)
add_executable(Queue 5-Queue.cpp)
