cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_CXX_STANDARD 23)


#add_executable(untitled main.cpp)
#add_executable(LinearSearch 1_LinearSearch.cpp)
#add_executable(BinarySearch 2_BinarySearch.cpp)
#add_executable(TwoCrystalBalls 3_TwoCrystalBalls.cpp)
#add_executable(BubbleSort 4_BubbleSort.cpp)
#add_executable(Queue 5-Queue.cpp)
#add_executable(Stack 6_Stack.cpp)
add_executable(Recursion 7_Recursion.cpp)
add_executable(Quicksort 8_Quicksort.cpp)
add_executable(Recursion2 10_Recursion2.cpp)
